...
    func makeUI(){
        
        
        
        /* Navigationbar and View UI Implementation code */
        self.view.backgroundColor = .white
        self.navigationController?.navigationBar.topItem?.title = "Search"
        
        /* Textfield UI Implementation code  */
        self.searchQuery.backgroundColor = .white
        self.searchQuery.textAlignment = .left
        self.searchQuery.placeholder = "Search"
        self.searchQuery.translatesAutoresizingMaskIntoConstraints = false
...
    }
    
    func tableView(_ tableView: UITableView, numberOfRowsInSection section: Int) -> Int {
        
        if Parser.shared.bookShelf.count == 0 {
                print("")
                self.noDataLabel.text = "No Data"
                self.noDataLabel.textColor = .darkGray
                self.noDataLabel.textAlignment = NSTextAlignment.center
                self.tableView.backgroundView = noDataLabel

                self.noDataLabel.centerXAnchor.constraint(equalTo: view.centerXAnchor).isActive = true
                self.noDataLabel.centerYAnchor.constraint(equalTo: view.centerYAnchor).isActive = true
...
